z-index fix

--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,7 @@ img {
   position: fixed;
   width: 100%;
   min-height: 60px;
+  z-index: 9;
   background-color: #FFFFFF;
   border-bottom: 1px solid #ececec;
 }
@@ -88,7 +89,6 @@ img {
     min-height: 80px;
     top: 0;
     left: 0;
-    z-index: 5;
   }
 }
 
